--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ sass:
 # Gems
 plugins:
   - jekyll-paginate
-  # - jemoji #Uncomment this to allow emoji in your post
+  - jemoji #Uncomment this to allow emoji in your post
 
 # Permalinks
 permalink:      /:year-:month-:day/:title
