--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title:          Trung Nguyen - Product Designer
-description:    "Trung Nguyen - Product Designer, Product Management, User Experience, User Interface"
+title:          Trung Nguyen - Design Engineer
+description:    "Trung Nguyen - Product Designer, Product Management, User Experience, User Interface, Software Engineer"
 
 
 # Build settings
