--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@11ty/eleventy": "^3.0.0",
+    "@sindresorhus/slugify": "^2.2.1",
     "netlify-plugin-cache": "^1.0.3"
   }
 }
